--- a/zuul-client/src/main/resources/application.properties
+++ b/zuul-client/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8082
 eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
+eureka.client.register-with-eureka=false
+reeureka.client.register-with-eurek=false
 spring.application.name=cloud-simple-service
